--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -2,33 +2,33 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    background-color: #1A1A1D;
+  }
+  
+  body{
     background-color: #1A1A1D;
   }
   
   .container {
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     background: #FFFFFF;
     border-radius: 8px;
-    height: 60%;
     width: 35%;
   }
   
-  @media (min-width: 320px) and (max-width: 480px) {
+  @media (min-width: 320px) and (max-width: 800px) {
     .outerContainer {
-      height: 100%;
-    }
-  
-    .container {
+      justify-content: none;
       width: 100%;
-      height: 100%;
+      align-items: none;
+    }
+    
+    .container {
+      height: 93vh;
+    width: 100%;
     }
   }
   
-  @media (min-width: 480px) and (max-width: 1200px) {
-    .container {
-      width: 60%;
-    }
-  }
