--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -1,6 +1,5 @@
 .outerContainer {
     display: flex;
-    justify-content: center;
     align-items: center;
     background-color: #1A1A1D;
   }
@@ -10,13 +9,14 @@
   }
   
   .container {
-    height: 100vh;
+    height:100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     background: #FFFFFF;
     border-radius: 8px;
     width: 35%;
+    max-height: 100vh;
   }
   
   @media (min-width: 320px) and (max-width: 800px) {
@@ -24,11 +24,13 @@
       justify-content: none;
       width: 100%;
       align-items: none;
+      background-color: red;
     }
     
     .container {
-      height: 93vh;
-    width: 100%;
+      width: 100%;
+      max-height: 700px;
+      margin: 0;
     }
   }
   
