--- a/client/src/components/InfoBar/InfoBar.css
+++ b/client/src/components/InfoBar/InfoBar.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: #146e08;
+    background: #1a870d;
     border-radius: 4px 4px 0 0;
     height: 60px;
     width: 100%;
