--- a/client/src/components/Input/Input.css
+++ b/client/src/components/Input/Input.css
@@ -1,39 +1,49 @@
-*{
-  margin: 0;
+.input-div{
+  background: #202c33;
 }
 
-.form {
-    display: flex;
+form{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #202c33;
+  gap: 10px;
+  padding: 1rem;
+  width: 70%;
+  margin: 0 auto;
+}
+
+.input{
+  flex: 1;
+  padding: 10px;
+  background: #2a3942;
+  border: none;
+  border-radius: 10px;
+  color: white;
+}
+
+
+
+.sendButton{
+  color: white;
+  align-items: center;
+  cursor: pointer;
+  height: 100%;
+  /* border: 2px solid red; */
+}
+
+.sendIcon{
+  height: 100%;
+}
+
+input:focus{
+  outline: none;
+}
+
+@media screen and (max-width : 768px){
+  form{
+    width: 100%;
   }
+}
   
-  .formDiv{
-    background:rgb(4, 51, 81);
-  }
-  
-  .input {
-    border:1px solid rgba(255, 255, 255, 0.142);
-    border: none;
-    border-radius: 5px;
-    padding: 0 3%;
-    width: 92%;
-    font-size: 1rem;
-    margin: 0 5px;
-    margin-bottom: 5px;
-  }
-  
-  input:focus, textarea:focus, select:focus{
-    outline: none;
-  }
-  
-  button{
-    display: flex;
-    background: transparent;
-    align-items: center;
-    justify-content: center;
-    margin-right: 5px;
-  }
-  
-  .sendButton {
-    display: inline-block;
-    border: none;
-  }
